# api/openapi.json
@@ -6,7 +6,7 @@
     "license": {
       "name": ""
     },
-    "version": "0.1.0"
+    "version": "0.2.0"
   },
   "paths": {
     "/api/areas": {
@@ -2044,6 +2044,13 @@
             "items": {
               "$ref": "#/components/schemas/Departure"
             }
+          },
+          "mapped_gtfs_stop_id": {
+            "type": [
+              "string",
+              "null"
+            ],
+            "description": "The GTFS stop ID mapped to this IFOPT (if any)"
           },
           "stop_ifopt": {
             "type": "string"
